--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     overflow-x: auto;
     overflow-y: scroll;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    will-change: transfer;
     background: 0 0;
     -webkit-overflow-scrolling: touch;
 }
