improving scroll fps 5 (random 2)

--- a/website/style.css
+++ b/website/style.css
@@ -17,6 +17,7 @@ html {
 #unnecessaryWrapper {
     justify-content: center;
     background: var(--back-color);
+    background-color: var(--back-color);
     align-items: center;
 }
 
