--- a/website/style.css
+++ b/website/style.css
@@ -158,45 +158,45 @@ footer {
 }
 
 #homeBtn {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 5px;
     padding: 5px 10px;
 }
 
 #aboutBtn {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 5px;
     padding: 5px 10px;
 }
 
 #skillsBtn {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 5px;
     padding: 5px 10px;
 }
 
 #contactBtn {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 5px;
     padding: 5px 10px;
 }
 
 #aboutText {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 20px;
 }
 
 #contactText {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 20px;
 }
 
 #hamburgerbtn {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 20px;
 }
 
 #skillsText {
-    background: var(--back-color);
+    background-color: var(--back-color);
     border-radius: 20px;
 }
